# mci-extract

./: Readme.md  build.bat  config.json  input.json  json_to_yml.py  mci_extract.spec  output.yml  pyproject.toml  requirements.txt  sample.csv  sample.json  test_run.py  version.txt
installer/: setup.iss
src/mci/: cli.py  export.py  mideu.yml  parser.py
